CKAD-Preparation/Services and Networking/Network Policies/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-policy
  
spec:
  podSelector:
    matchLabels:
      name: internal
  policyTypes:
  - Egress:
  
  egress:
  - to:
    - podSelector:
        matchLabels:
          name: mysql
      ports:
      - protocol: TCP
        port: 3306
  - to:
    - podSelector:
        matchLabels:
          role: payroll
      ports:
      - protocol: TCP
        port: 8080
